<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main_activity"
    tools:context=".FuvestBibliotecaActivity"
    >

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            layout="@layout/toolbar_activity" />
    </TableRow>

    <TextView
        android:id="@+id/textViewBibliotecaFuvest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/txtViewProvaFuvest"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow2"
        app:textAllCaps="true" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="673dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBibliotecaFuvest">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtViewProvaFuvest"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:text="@string/txtViewProva"
                android:textAlignment="viewStart"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtViewGabaritoFuvest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtViewGabarito"
                android:textAlignment="viewStart"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtViewFeitoFuvest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtViewFeito"
                android:textAlignment="center"
                android:textStyle="bold" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtViewProva1Fuvest"
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtViewProva1Fuvest"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/txtViewGabarito1Fuvest"
                android:layout_width="198dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/txtViewGabarito1Fuvest"
                android:textAlignment="viewStart" />

            <CheckBox
                android:id="@+id/checkBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtViewProva2Fuvest"
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtViewProva2Fuvest"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/txtViewGabarito2Fuvest"
                android:layout_width="198dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/txtViewGabarito2Fuvest"
                android:textAlignment="viewStart" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtViewProva3Fuvest"
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtViewProva3Fuvest"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/txtViewGabarito3Fuvest"
                android:layout_width="198dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/txtViewGabarito3Fuvest"
                android:textAlignment="viewStart" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtViewProva4Fuvest"
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtViewProva4Fuvest"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/txtViewGabarito4Fuvest"
                android:layout_width="198dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/txtViewGabarito4Fuvest"
                android:textAlignment="viewStart" />

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtViewProva5Fuvest"
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtViewProva5Fuvest"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/txtViewGabarito5Fuvest"
                android:layout_width="198dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/txtViewGabarito5Fuvest"
                android:textAlignment="viewStart" />

            <CheckBox
                android:id="@+id/checkBox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtViewProva6Fuvest"
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtViewProva6Fuvest"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/txtViewGabarito6Fuvest"
                android:layout_width="198dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/txtViewGabarito6Fuvest"
                android:textAlignment="viewStart" />

            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtViewProva7Fuvest"
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtViewProva7Fuvest"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/txtViewGabarito7Fuvest"
                android:layout_width="198dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/txtViewGabarito7Fuvest"
                android:textAlignment="viewStart" />

            <CheckBox
                android:id="@+id/checkBox7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtViewProva8Fuvest"
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtViewProva8Fuvest"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/txtViewGabarito8Fuvest"
                android:layout_width="198dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/txtViewGabarito8Fuvest"
                android:textAlignment="viewStart" />

            <CheckBox
                android:id="@+id/checkBox8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtViewProva9Fuvest"
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtViewProva9Fuvest"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/txtViewGabarito9Fuvest"
                android:layout_width="198dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/txtViewGabarito9Fuvest"
                android:textAlignment="viewStart" />

            <CheckBox
                android:id="@+id/checkBox9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>


    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>