<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main_activity"
    tools:context=".FuvestBibliotecaActivity"    >

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/toolbar_activity" />

    </TableRow>

    <TextView
        android:id="@+id/textViewBibliotecaFuvest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:text="@string/txtViewBibliotecaFuvest"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableRow2"
        app:textAllCaps="true" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="673dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBibliotecaFuvest">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:text="@string/txtViewLivro"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textIsSelectable="false"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtViewAutor"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textIsSelectable="false"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/txtViewLido"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textIsSelectable="false"
                android:textSize="15sp"
                android:textStyle="bold" />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtViewLivro1Fuvest"
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtViewLivro1Fuvest"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/txtViewAutor1Fuvest"
                android:layout_width="198dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:text="@string/txtViewAutor1Fuvest"
                android:textAlignment="viewStart" />

            <Button
                android:id="@+id/btnDownloadBibliotecaFuvest1"
                android:layout_width="30dp"
                android:layout_height="45dp"
                android:background="@drawable/ic_download" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center">

            <TextView
                android:id="@+id/txtViewLivro2Fuvest"
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtViewLivro2Fuvest"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/txtViewAutor2Fuvest"
                android:layout_width="198dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:text="@string/txtViewAutor2Fuvest"
                android:textAlignment="viewStart" />

            <Button
                android:id="@+id/btnDownloadBibliotecaFuvest2"
                android:layout_width="30dp"
                android:layout_height="45dp"
                android:background="@drawable/ic_download" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtViewLivro3Fuvest"
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtViewLivro3Fuvest"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/txtViewAutor3Fuvest"
                android:layout_width="198dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:text="@string/txtViewAutor3Fuvest"
                android:textAlignment="viewStart" />

            <Button
                android:id="@+id/btnDownloadBibliotecaFuvest3"
                android:layout_width="30dp"
                android:layout_height="45dp"
                android:background="@drawable/ic_download" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtViewLivro4Fuvest"
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtViewLivro4Fuvest"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/txtViewAutor4Fuvest"
                android:layout_width="198dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:text="@string/txtViewAutor4Fuvest"
                android:textAlignment="viewStart" />

            <Button
                android:id="@+id/btnDownloadBibliotecaFuvest4"
                android:layout_width="30dp"
                android:layout_height="45dp"
                android:background="@drawable/ic_download" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center">

            <TextView
                android:id="@+id/txtViewLivro5Fuvest"
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtViewLivro5Fuvest"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/txtViewAutor5Fuvest"
                android:layout_width="198dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:text="@string/txtViewAutor5Fuvest"
                android:textAlignment="viewStart" />

            <Button
                android:id="@+id/btnDownloadBibliotecaFuvest5"
                android:layout_width="30dp"
                android:layout_height="45dp"
                android:background="@drawable/ic_download" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center">

            <TextView
                android:id="@+id/txtViewLivro6Fuvest"
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtViewLivro6Fuvest"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/txtViewAutor6Fuvest"
                android:layout_width="198dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:text="@string/txtViewAutor6Fuvest"
                android:textAlignment="viewStart" />

            <Button
                android:id="@+id/btnDownloadBibliotecaFuvest6"
                android:layout_width="30dp"
                android:layout_height="45dp"
                android:background="@drawable/ic_download" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtViewLivro7Fuvest"
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtViewLivro7Fuvest"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/txtViewAutor7Fuvest"
                android:layout_width="198dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:text="@string/txtViewAutor7Fuvest"
                android:textAlignment="viewStart" />

            <Button
                android:id="@+id/btnDownloadBibliotecaFuvest7"
                android:layout_width="30dp"
                android:layout_height="45dp"
                android:background="@drawable/ic_download" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtViewLivro8Fuvest"
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtViewLivro8Fuvest"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/txtViewAutor8Fuvest"
                android:layout_width="198dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:text="@string/txtViewAutor8Fuvest"
                android:textAlignment="viewStart" />

            <Button
                android:id="@+id/btnDownloadBibliotecaFuvest8"
                android:layout_width="30dp"
                android:layout_height="45dp"
                android:background="@drawable/ic_download" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtViewLivro9Fuvest"
                android:layout_width="172dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtViewLivro9Fuvest"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/txtViewAutor9Fuvest"
                android:layout_width="198dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:text="@string/txtViewAutor9Fuvest"
                android:textAlignment="viewStart" />

            <Button
                android:id="@+id/btnDownloadBibliotecaFuvest9"
                android:layout_width="30dp"
                android:layout_height="45dp"
                android:background="@drawable/ic_download" />

        </TableRow>


    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>