<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main_activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="vertical">

        <include layout="@layout/toolbar_activity" />

        <Button
            android:id="@+id/btnEstudoSemana1"
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:layout_marginStart="125dp"
            android:layout_marginLeft="125dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="125dp"
            android:background="@drawable/button_shape"
            android:onClick="EntrarEstudoSemana1"
            android:text="@string/btnEstudoSemana1"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnEstudoSemana2"
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:layout_marginStart="125dp"
            android:layout_marginLeft="125dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="125dp"
            android:layout_marginRight="125dp"
            android:background="@drawable/button_shape"
            android:onClick="EntrarEstudoSemana2"
            android:text="@string/btnEstudoSemana2"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnEstudoSemana3"
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:layout_marginStart="125dp"
            android:layout_marginLeft="125dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="125dp"
            android:layout_marginRight="125dp"
            android:background="@drawable/button_shape"
            android:onClick="EntrarEstudoSemana3"
            android:text="@string/btnEstudoSemana3"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnEstudoSemana4"
            android:layout_width="150dp"
            android:layout_height="75dp"
            android:layout_marginStart="125dp"
            android:layout_marginLeft="125dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="125dp"
            android:layout_marginRight="125dp"
            android:background="@drawable/button_shape"
            android:onClick="EntrarEstudoSemana4"
            android:text="@string/btnEstudoSemana4"
            android:textSize="18sp" />

    </LinearLayout>


</LinearLayout>